--- a/app/views/appointments/new.html.erb
+++ b/app/views/appointments/new.html.erb
@@ -1,10 +1,10 @@
 
 
 <div class="container center">
-  <h4> Create a New Appointments </h4>
+  <h4> Create a New Appointment </h4>
 
   <%= simple_form_for [@artist, @appointment], url: artist_appointments_path, method: :post do |f| %>
-  <%= f.input :status %>
+  <%= f.input :status, collection: ["Pending"] %>
   <%= f.button :submit %>
 <% end %>
 
