bootstrap working, materialize depriciated' '

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,8 +9,6 @@
 @import "components/index";
 @import "pages/index";
 
-// Materialize gem
-@import "materialize/components/color";
-$primary-color: color("red", "darken-2") !default;
-$secondary-color: color("red", "darken-3") !default;
-@import "materialize";
+// Bootstrap
+@import "bootstrap-sprockets";
+@import "bootstrap";
