Add datetime picker, add columns to appointments table

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,3 +12,7 @@
 // Bootstrap
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+@import 'bootstrap-sprockets';
+@import 'bootstrap';
+@import 'bootstrap-datetimepicker';
