--- a/app/views/artists/registrations/new.html.erb
+++ b/app/views/artists/registrations/new.html.erb
@@ -5,6 +5,9 @@
 
   <div class="form-inputs">
   <%= f.input :name, required: true, autofocus: true %>
+  <%= f.input :address, required: true, autofocus: true %>
+  <%= f.input :city, required: true, autofocus: true %>
+  <%= f.input :info, required: true, autofocus: true %>
     <%= f.input :email, required: true, autofocus: true %>
     <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
     <%= f.input :password_confirmation, required: true %>
