method parsing string to date, schedule method in artist model

--- a/app/views/layouts/_dashboard_artist.html.erb
+++ b/app/views/layouts/_dashboard_artist.html.erb
@@ -5,3 +5,9 @@
   <p>You're having an appointment with <%= appointment.user %></p>
   <p>Status: <%= appointment.status %></p>
 <% end %>
+
+<%= simple_form_for @artist, url: artist_path, method: :post do |f| %>
+<%= f.input :start_time, input_html: {id: 'datetimepicker'} %>
+<%= f.input :end_time, input_html: {id: 'datetimepicker2'} %>
+<%= f.button :submit %>
+<% end %>
