--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,14 @@
 <!-- Checking who is loggined for dev purposes -->
+
+
+
+
+
 <% if current_artist %>
   <h1> Hello <%= current_artist.email %>, you're artist</h1>
   <%= link_to "logout", destroy_artist_session_path, method: :delete %>
+  <%= render 'layouts/dashboard_artist' %>
+
 <% end %>
 
 
