--- a/app/views/layouts/_dashboard_artist.html.erb
+++ b/app/views/layouts/_dashboard_artist.html.erb
@@ -6,7 +6,7 @@
   <p>Status: <%= appointment.status %></p>
 <% end %>
 
-<%= simple_form_for @artist, url: artist_path, method: :post do |f| %>
+<%= simple_form_for current_artist, url: artist_path, method: :post do |f| %>
 <%= f.input :start_time, input_html: {id: 'datetimepicker'} %>
 <%= f.input :end_time, input_html: {id: 'datetimepicker2'} %>
 <%= f.button :submit %>
