--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>GetInked</title>
-    <%= action_cable_meta_tag %>
-    <%= csrf_meta_tags %>
-    <%= stylesheet_link_tag 'application', media: 'all' %>
-  </head>
-  <body>
-   <%= render 'shared/navbar' %>
-    <%= yield %>
-    <%= javascript_include_tag 'application' %>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>GetInked</title>
+  <%= action_cable_meta_tag %>
+  <%= csrf_meta_tags %>
+  <%= stylesheet_link_tag 'application', media: 'all' %>
+</head>
+<body>
+ <%= render 'shared/navbar' %>
+ <%= yield %>
+
+ <%= javascript_include_tag "https://maps.google.com/maps/api/js" %>
+ <%= javascript_include_tag "https://cdn.rawgit.com/printercu/google-maps-utility-library-v3-read-only/master/markerclusterer/src/markerclusterer_compiled.js" %>
+ <%= javascript_include_tag "https://cdn.rawgit.com/printercu/google-maps-utility-library-v3-read-only/master/infobox/src/infobox_packed.js" %>
+
+ <%= javascript_include_tag "application" %>
+
+ <%= yield(:after_js) %>
+
+</body>
 </html>
