upload pictures functionality implemented

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,6 +11,8 @@
   <h1> Hello <%= current_artist.email %>, you're artist</h1>
   <%= link_to "logout", destroy_artist_session_path, method: :delete %>
   <%= render 'layouts/dashboard_artist' %>
+<% current_artist.photos.nil? %>
+<%= render 'layouts/artist_pictures_select' %>
 
 <% end %>
 
