--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -1,8 +1,21 @@
 <div class="wrapper text-center">
+
+<div>
+  Browse our Database of curated artists
+    <%= form_tag "/artists", method: "get", class: 'form-banner' do %>
+    <%= select_tag 'city', options_for_select(@l_array), class: 'select-pages-home' %>
+    <%= submit_tag "Discover Art", class: 'btn-landing' %>
+    <% end %>
+
+
+  </div>
+
+<br>
+<br>
 <% @artists.each do |artist| %>
-<%= link_to artist.name, artist_path(artist) %>
+    <% if artist.city == params[:city] %>
  <%= image_tag artist.avatar_image, class: "profile-image img-circle" %>
- <h4> <%= artist.artist_name  %> </h4>
+ <h4> <%= link_to artist.name, artist_path(artist) %> </h4>
  <h5> <%= artist.artist_bio %> </h5>
  <p> Followed by <%= artist.followers %> mutherfuckin people </p>
  <p> Check some sick tattoos </p>
@@ -62,34 +75,16 @@
 
 
 
- <div>
-
-    <%= form_tag "/artists", method: "get", class: 'form-banner' do %>
-    <%= select_tag 'city', options_for_select(@l_array), class: 'select-pages-home' %>
-    <%= submit_tag "Discover Art", class: 'btn-landing' %>
-    <% end %>
 
 
-  </div>
+<% end %>
 
-
-
-
-
-
-
-<% @artists.each do |artist| %>
-
-  <% if artist.city == params[:city] %>
-
-    <%= link_to artist.name, artist_path(artist) %>
-    <% end %>
-
- <br>
- <% end %>
 
   </div>
 </div>
+</div>
+    <% end %>
 
- </div>
+
+
 
