--- a/app/views/layouts/_dashboard_user.html.erb
+++ b/app/views/layouts/_dashboard_user.html.erb
@@ -2,6 +2,6 @@
 
 <h3>Appointments of current user:</h3>
 <% @appointments.each do |appointment| %>
-  <p>You're having an appointment with <%= appointment.artist %></p>
+  <p>You're having an appointment with <%= appointment.artist.name %></p>
   <p>Status: <%= appointment.status %></p>
 <% end %>
