--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,11 +11,11 @@
   <h1> Hello <%= current_artist.email %>, you're artist</h1>
   <%= link_to "logout", destroy_artist_session_path, method: :delete %>
   <%= render 'layouts/dashboard_artist' %>
-<% current_artist.photos.nil? %>
+<% if current_artist.photos.count == 0 %>
 <%= render 'layouts/artist_pictures_select' %>
 
+  <% end %>
 <% end %>
-
 
 
 
