Edits on user dashboard

--- a/app/views/layouts/_dashboard_artist.html.erb
+++ b/app/views/layouts/_dashboard_artist.html.erb
@@ -1,3 +1,4 @@
+<h2>Hello <%= current_artist.name %></h2>
 <h1>This is artist dashboard!</h1>
 
 
@@ -12,7 +13,9 @@
 <%= link_to 'Edit Availability', new_availability_path %>
 
 
+
 <h3>Your upcoming appointments:</h3>
+
 
 
 
