--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,6 +9,7 @@
 @import "layout/index";
 @import "components/index";
 @import "pages/index";
+@import "pages/artist-show";
 
 // Bootstrap
 @import "bootstrap-sprockets";
