whole day of work huh thanks Ruben Francesco and Damian

--- a/app/views/appointments/new.html.erb
+++ b/app/views/appointments/new.html.erb
@@ -10,6 +10,7 @@
 
      <%= f.input :start_time, input_html: {id: 'datetimepicker'} %>
      <%= f.input :end_time, input_html: {id: 'datetimepicker2'} %>
+     <%= text_area_tag :content %>
 
 
      <%= f.button :submit %>
