--- a/app/views/layouts/_dashboard_artist.html.erb
+++ b/app/views/layouts/_dashboard_artist.html.erb
@@ -1,13 +1,37 @@
 <h1>This is artist dashboard!</h1>
 
-<h3>Appointments of current user:</h3>
+<h3>Your appointments:</h3>
 <% @appointments.each do |appointment| %>
   <p>You're having an appointment with <%= appointment.user %></p>
   <p>Status: <%= appointment.status %></p>
+  <p>Messages:
+  <% appointment.messages.each do |message| %>
+  <div class="container ">
+    <% if message.from == 'artist' %>
+    <div class="row">
+      <div class="col-xs-12 text-left">
+        <strong>You(<%= message.artist.email%>): </strong><%= message.content %>
+      </div>
+    </div>
+    <% end %>
+    <% if message.from == 'user' %>
+    <div class="row">
+      <div class="col-xs-12 text-right">
+        <strong><%= message.user.email%>: </strong> <%= message.content %>
+      </div>
+    </div>
+    <% end %>
+  </div>
+  <% end %>
+    <%= simple_form_for :message, remote: true, method: :post do |f| %>
+
+     <%= hidden_field_tag "artist", appointment.artist.id %>
+     <%= hidden_field_tag "user", appointment.user.id %>
+     <%= hidden_field_tag "appointment", appointment.id %>
+     <%= hidden_field_tag "from", 'artist' %>
+     <%= text_area_tag :content %>
+
+     <%= f.button :submit %>
+     <% end %>
 <% end %>
 
-<%= simple_form_for @artist, url: artist_path, method: :post do |f| %>
-<%= f.input :start_time, input_html: {id: 'datetimepicker'} %>
-<%= f.input :end_time, input_html: {id: 'datetimepicker2'} %>
-<%= f.button :submit %>
-<% end %>
