--- a/app/views/layouts/_dashboard_user.html.erb
+++ b/app/views/layouts/_dashboard_user.html.erb
@@ -2,6 +2,31 @@
 
 <h3>Appointments of current user:</h3>
 <% @appointments.each do |appointment| %>
-  <p>You're having an appointment with <%= appointment.artist %></p>
-  <p>Status: <%= appointment.status %></p>
+<p>You're having an appointment with <%= appointment.artist.email %></p>
+<p>Status: <%= appointment.status %></p>
+<p>Messages:
+<div class="container">
+  <% appointment.messages.each do |message| %>
+    <% if message.from == 'user' %>
+    <div class="user-messages">
+      <%= render 'layouts/user_messages', user: message.user.email, message: message.content, position: "left" %>
+    </div>
+    <% end %>
+    <% if message.from == 'artist' %>
+      <div class="artist-messages">
+      <%= render 'layouts/user_messages', user: message.artist.email, message: message.content, position: "right" %>
+    </div>
+    <% end %>
+  <% end %>
+  </div>
+    <%= simple_form_for :message, remote: true, method: :post do |f| %>
+
+     <%= hidden_field_tag "artist", appointment.artist.id %>
+     <%= hidden_field_tag "user", appointment.user.id %>
+     <%= hidden_field_tag "appointment", appointment.id %>
+     <%= hidden_field_tag "from", 'user' %>
+     <%= text_area_tag :content %>
+
+     <%= f.button :submit %>
+     <% end %>
 <% end %>
