made a better dashbaotd:

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -7,7 +7,7 @@
 
   <div class="navbar-right">
 
-    <% if user_signed_in? %>
+    <% if user_signed_in? || artist_signed_in? %>
 
     <div class="navbar-item">
       <div class="dropdown">
