--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -65,24 +65,24 @@
 
 
 <% if  (user_signed_in? == false)  && (artist_signed_in? == false)   %>
-<p>
-<%= link_to "artist log in", artist_session_path  %>
-</p>
-<p>
-<%= link_to "user sign in", user_session_path %>
-</p>
+
+ <div style="text-align: center;">
 <%= link_to "explore our artist", artists_path %>
-
-
-
-
-
- <div>
-
     <%= form_tag "/artists", method: "get", class: 'form-banner' do %>
     <%= select_tag 'city', options_for_select(@l_array), class: 'select-pages-home' %>
     <%= submit_tag "Discover Art", class: 'btn-landing' %>
     <% end %>
+
+
+<% @artists.each do |artist| %>
+<%= image_tag artist.image, class: "profile-image img-circle" %>
+
+ <h4> <%= link_to artist.name, artist_path(artist) %> </h4>
+ <h5> <%= artist.bio %> </h5>
+ <p> Followed by <%= artist.followers %> mutherfuckin people </p>
+ <p> Check some sick tattoos </p>
+
+  <% end %>
 
 
   </div>
