upload sketch implemented

--- a/app/views/layouts/_dashboard_user.html.erb
+++ b/app/views/layouts/_dashboard_user.html.erb
@@ -6,6 +6,8 @@
 <% @appointments.each do |appointment| %>
 <p>You're having an appointment with <%= appointment.artist.email %></p>
 <p>Status: <%= appointment.status %></p>
+  <p>Your Sketch: </p>
+  <%= cl_image_tag appointment.photo, height: 300, width: 400, crop: :fill %>
 <p>Messages:
 <div class="container">
   <% appointment.messages.each do |message| %>
