--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,7 +1,13 @@
-<% if current_artist %>
+<% if current_artist && current_artist.photos.count == 0 %>
 <div id="dashboard-artist">
 <%= render 'layouts/dashboard_artist'  %>
+<%= render 'layouts/artist_pictures_select' %>
 </div>
+
+<% elsif current_artist %>
+<div id="dashboard-artist">
+<%= render 'layouts/dashboard_artist'  %>
+
 <% else %>
 <div id="dashboard-user">
   <%= render 'layouts/dashboard_user', appointments: @appointments %>
