--- a/app/views/layouts/_user_messages.html.erb
+++ b/app/views/layouts/_user_messages.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
   <div class="col-xs-12 text-<%=  position %>">
-    <strong>You(<%= user%>): </strong><%= message %>
+    <strong><%= user %>: </strong><%= message %>
   </div>
 </div>
