--- a/app/views/pages/refresh.js.erb
+++ b/app/views/pages/refresh.js.erb
@@ -1,1 +1,13 @@
+
+
+
+
+
+<% if current_artist %>
+$('#dashboard-artist').empty().append("<%= j render 'layouts/dashboard_artist', appointments: @appointments, current_artist: current_artist  %>");
+
+<% else %>
 $('#dashboard-user').empty().append("<%= j render 'layouts/dashboard_user', appointments: @appointments  %>");
+
+<% end %>
+
