--- a/app/views/layouts/_dashboard_artist.html.erb
+++ b/app/views/layouts/_dashboard_artist.html.erb
@@ -3,8 +3,10 @@
 
 <h3>Your appointments:</h3>
 <% @appointments.each do |appointment| %>
-  <p>You're having an appointment with <%= appointment.user %></p>
+  <p>You have an upcoming appointment with <%= appointment.user %></p>
   <p>Status: <%= appointment.status %></p>
+  <%= link_to "Confirm",  confirm_artist_appointment_path(current_artist, appointment) %>
+  <%= link_to "Deny", deny_artist_appointment_path(current_artist, appointment) %>
 
   <p>Messages:
   <% appointment.messages.each do |message| %>
