--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -19,7 +19,7 @@
 
  <h4> <%= link_to artist.name, artist_path(artist) %> </h4>
  <h5> <%= artist.bio %> </h5>
- <p> Followed by <%= artist.followers %> mutherfuckin people </p>
+ <p> Followed by <%= artist.followers %> people </p>
  <p> Check some sick tattoos </p>
 
 
