--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -15,10 +15,10 @@
 <% @artists.each do |artist| %>
   <% if artist.city == params[:city]%>
 
- <%= image_tag artist.image, class: "profile-image img-circle" %>
+ <%= image_tag artist.avatar, class: "profile-image img-circle" %>
 
  <h4> <%= link_to artist.name, artist_path(artist) %> </h4>
- <h5> <%= artist.bio %> </h5>
+ <h5> <%= artist.info %> </h5>
  <p> Followed by <%= artist.followers %> people </p>
  <p> Check some sick tattoos </p>
 
