--- a/app/assets/stylesheets/components/_banner-landing-page.scss
+++ b/app/assets/stylesheets/components/_banner-landing-page.scss
@@ -8,9 +8,11 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  font-family: 'Bree Serif';
   h1 {
     font-size: 48px;
     margin: 0;
+    letter-spacing: 4px;
   }
   h2{
     font-size: 36px;
