--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,74 +1,18 @@
-<% @style_array = ["Traditional", "Watercolor", "Realism", "Tribal", "New School", "Neo Traditional", "Japanese", "Dotwork", "Geometric", "Script", "Illustrative"] %>
-<!-- Checking who is loggined for dev purposes -->
-
-
-<% @artists = Artist.all %>
-     <% @l_array = ["choose a city"]  %>
-    <%  @artists.each do |artist|  %>
-     <%  @l_array << artist.city  %>
-    <% end %>
-    <% @l_array = @l_array.uniq  %>
-
-
 <% render 'shared/navbar' %>
 
 
-<% if current_artist %>
-
-<h1> Hello <%= current_artist.email %>, you're artist</h1>
-<%= link_to "logout", destroy_artist_session_path, method: :delete %>
-
-<% if current_artist.photos.count == 0 %>
+<% if  user_signed_in? %>
+  <h1> Hello <%= current_user.email %>, you're user</h1>
+<% elsif artist_signed_in? %>
+  <h1> Hello <%= current_artist.email %>, you're user</h1>
+  <% if current_artist.photos.count == 0 %>
 <%= render 'layouts/artist_pictures_select' %>
 
 <% end %>
+  <% else %>
+  <h1>
+    Please make an account
+  </h1>
 <% end %>
 
-<% if current_user%>
-<h1> Hello <%= current_user.email %>, you're user</h1>
-<%#= link_to "logout", destroy_user_session_path, method: :delete %>
-<%#= link_to "explore our artist", artists_path %>
-
-<div class="banner-landing-page">
-  <h1>Get Inked by top local artists</h1>
-  <h2>Discover new works and book an appointment</h2>
- <div>
-
-  <%= form_tag "/artists", method: "get", class: 'form-banner' do |f| %>
-  <%= select_tag 'city', options_for_select(@l_array), class: 'select-pages-home' %>
-  <%= select_tag 'style', options_for_select(@style_array), multiple: true, class: 'multiselectuser select-pages-home' %>
-  <%= submit_tag "Discover Art", class: 'btn-landing' %>
-  <% end %>
-
-</div>
-</div>
-
-<% end %>
-
-
-<% if  (user_signed_in? == false)  && (artist_signed_in? == false)   %>
-
-
-
-<div class="banner-landing-page">
-  <h1>Get Inked by top local artists</h1>
-  <h2>Discover new works and book an appointment</h2>
- <div>
-
-  <%= form_tag "/artists", method: "get", class: 'form-banner' do |f| %>
-  <%= select_tag 'city', options_for_select(@l_array), class: 'select-pages-home' %>
-  <%= select_tag 'style', options_for_select(@style_array), multiple: true, class: 'multiselectuser select-pages-home' %>
-  <%= submit_tag "Discover Art", class: 'btn-landing' %>
-  <% end %>
-
-</div>
-</div>
-
-
-
-
-
-
-<% end %>
-
-
+  <%= render partial: 'banner', locals: { cities: @cities, styles: @styles } %>
