--- a/app/assets/stylesheets/components/_banner-landing-page.scss
+++ b/app/assets/stylesheets/components/_banner-landing-page.scss
@@ -8,7 +8,8 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  font-family: 'Bree Serif';
+  font-family: $base-font;
+
   h1 {
     font-size: 48px;
     margin: 0;
