action cable chat huh

--- a/app/views/layouts/_dashboard_artist.html.erb
+++ b/app/views/layouts/_dashboard_artist.html.erb
@@ -10,40 +10,9 @@
 <p>Status: <%= appointment.status %></p>
  <p><%= appointment.user.username %> sketch: </p>
   <%= cl_image_tag appointment.photo, height: 300, width: 400, crop: :fill %>
-<p>Messages:</p>
+<p>Message:</p>
+<p><%= appointment.message %></p>
 
-
-<div class="container">
- <span id="messageslist">
-
-  <% appointment.messages.each do |message| %>
-
-  <% if message.from == 'artist' %>
-  <div class="user-messages">
-    <%= render 'layouts/user_messages', user: message.artist.email, message: message.content, position: "left" %>
-  </div>
-  <% end %>
-
-  <% if message.from == 'user' %>
-  <div class="artist-messages">
-    <%= render 'layouts/user_messages', user: message.user.email, message: message.content, position: "right" %>
-  </div>
-  <% end %>
-
-  <% end %>
-</span>
-</div>
-
-<%= simple_form_for :message, remote: true, method: :post do |f| %>
-
-<%= hidden_field_tag "artist", appointment.artist.id %>
-<%= hidden_field_tag "user", appointment.user.id %>
-<%= hidden_field_tag "appointment", appointment.id %>
-<%= hidden_field_tag "from", 'artist' %>
-<%= text_area_tag :content %>
-
-<%= f.button :submit %>
-<% end %>
 <% end %>
 
 <h3>Your current availability:</h3>
