--- a/app/views/appointments/new.html.erb
+++ b/app/views/appointments/new.html.erb
@@ -11,9 +11,9 @@
      <%= f.input :start_time, input_html: {id: 'datetimepicker'} %>
      <%= f.input :end_time, input_html: {id: 'datetimepicker2'} %>
      <%#= f.input :sketch %>
-      <%= f.input :photo %>
+     <%= f.input :photo %>
      <%= f.input :photo_cache, as: :hidden %>
-     <%= text_area_tag :content %>
+     <%= f.input :message %>
 
 
      <%= f.button :submit %>
