--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -1,14 +1,40 @@
-<h1><%= @artist.name %></h1>
-<h3><%= @artist.address %></h3>
-<h3><%= @artist.city %></h3>
-<p>Availabilty:</p>
-<% @artist.availabilities.each do |availability|%>
-<ul>
-  <%= availability.day %>
-  <%= availability.start_time %> -
-  <%= availability.end_time %>
-</ul>
-<% end %>
+<div class="container">
+  <%= image_tag @artist.avatar, class: "profile-image img-circle img-artist-show" %>
+  <div class="artist-show-info"></div>
+  <h1><%= @artist.name %></h1>
+  <h3><%= @artist.city %></h3>
+  <%= link_to("http://maps.google.com/maps?q=#{@artist.latitude},#{@artist.longitude}") do %>
+  <i class="fa fa-map-marker" aria-hidden="true"> </i>  <%= @artist.address %>
+  <% end %>
+  <p>Availabilty:</p>
+  <% @artist.availabilities.each do |availability|%>
+  <ul>
+    <%= availability.day %>
+    <%= availability.start_time %> -
+    <%= availability.end_time %>
+  </ul>
+  <% end %>
+<p>   <%= link_to "book me!", new_artist_appointment_path(@artist) %>
+</div>
+</div>
+
+<div class="container-position-relative">
+  <div class="row">
+   <!--  <div class="col-xs-6 col-xs-offset-2"> -->
+   <% @artist.photos.each do |photo| %>
+   <div class="col-xs-6 col-lg-4">
+    <%= link_to photo.url, class: "swipebox " do %>
+    <%= image_tag photo.url, class: "photo-artist-show" %>
+  </div>
+  <% end %>
+  <% end %>
+  <!--    </div> -->
+</div>
+</div>
+
+
+
+
 
 <%= link_to "Leave a review", new_artist_review_path(@artist) %>
 <h5>Reviews of <%= @artist.name %></h5>
@@ -16,48 +42,6 @@
 <%= review.description %>
 <%= review.rating %>
 <% end %>
-
-<p>   <%= link_to "book me!", new_artist_appointment_path(@artist) %>
-
-
-<div class="row">
-    <% @artist.photos.each do |photo| %>
-
-    <div class="col-sm-4">
-      <%= link_to photo.url, class: "swipebox" do %>
-        <%= image_tag photo.url %>
-         <% end %>
-    </div>
-
-  <% end %>
-</div>
-
-
-
-
-  <div id="map" style="width: 100%; height: 600px;"></div>
-
-  <% content_for(:after_js) do %>
-  <script>
-    $(document).ready(function() {
-      var handler = Gmaps.build('Google');
-      handler.buildMap({ internal: { id: 'map' } }, function() {
-        markers = handler.addMarkers(<%= raw @hash.to_json %>);
-        handler.bounds.extendWith(markers);
-        handler.fitMapToBounds();
-        if (markers.length == 0) {
-          handler.getMap().setZoom(2);
-        } else if (markers.length == 1) {
-          handler.getMap().setZoom(14);
-        }
-      });
-    });
-  </script>
-
-
-  <% end %>
-
-
 
 
 
